<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SuperToasts Demo</string>

    <string name="animation">Animation</string>
    <string name="duration">Duration</string>
    <string name="background">Background</string>
    <string name="text_size">Text size</string>
    <string name="show_image">Show image</string>
    <string name="show">Show</string>
    <string name="placeholder">Placeholder</string>
    <string name="dummy_textview">Dummy TextView</string>
    <string name="delete">Delete</string>
    <string name="toast_type">Toast type</string>
    <string name="button_type">Button type</string>
    <string name="progress_type">Progress type</string>
    <string name="horizontal_progress_type">Horizontal progress type</string>
    <string name="user_dismiss_function">User dismiss function</string>
    <string name="wiki">Wiki</string>
    <string name="github">Github</string>
    <string name="onclick">On Click!</string>
    <string name="error_prehoneycomb">This does nothing on pre honeycomb devices!</string>


</resources>
